# nf-meta

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build_and_publish.yml  pytest.yml  test_frontend_build.yml
src/nf_meta/: __init__.py  __main__.py  cli.py
src/nf_meta/core/: cache.py  errors.py  events.py  graph.py  history.py  models.py  nf_core_utils.py  nf_param_validation.py  session.py
src/nf_meta/editor/: __init__.py  base_editor.py  browser_editor.py  editor.py  utils.py
src/nf_meta/editor/backend/: __init__.py  api.py  serializers.py
src/nf_meta/editor/frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/nf_meta/editor/frontend/scripts/: extract-version.js
src/nf_meta/editor/frontend/src/: App.vue  LayoutGraph.vue  hotkeys.ts  layout_graph.ts  main.ts  store.ts  style.css  types.ts  utils.ts
src/nf_meta/editor/frontend/src/components/: ActivityLog.vue  CustomFileInput.vue  Footer.vue  GlobalConfig.vue  Icon.vue  LoadDialog.vue  SaveDialog.vue  Sidebar.vue  SidebarModuleDetail.vue  SidebarNodeDetail.vue  SidebarPipelineDetail.vue  Snackbar.vue  WorkflowNode.vue  YamlEditor.vue
src/nf_meta/editor/frontend/src/store/: api_store.ts  graph_store.ts  index.ts  ui_store.ts
src/nf_meta/editor/frontend_dist/: index.html
src/nf_meta/editor/frontend_dist/assets/: index-BBCK3yA_.js  index-BJfMnzc7.js  index-BMpAIjEe.js  index-BS1w1jTr.css  index-Bb4bWPWo.js  index-Be5SDGKw.js  index-BeQMBiE2.css  index-C05mzFW-.css  index-C23FgNmk.js  index-CUFGOfKn.js  index-CVm9ErGs.js  index-Dc_iBOIb.css  index-Dmto5axE.js  index-Dn4aaNvP.js  index-ESZ-ptZu.css  index-yoDIyi8K.css
src/nf_meta/engine/: errors.py  events.py  graph.py  history.py  models.py  nf_core_utils.py  runner.py  session.py
src/nf_meta/runner/: __init__.py  base_runner.py  cascade_runner.py  errors.py  python_runner.py  runner.py  utils.py  workflow_run.py
tests/: conftest.py
tests/core/: test_errors.py  test_graph.py  test_history.py  test_models.py  test_param_validation.py  test_session.py
tests/fixtures/: minimal.yaml
tests/runner/: test_python_runner.py  test_runner.py  test_runner_utils.py  test_workflow_run.py
