[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"nf_meta.editor" = [
    "frontend_dist/**/*",
]

[project]
name = "nf-meta"
version = "0.2.3"
description = "nf-meta is a cli tool for building, validating and running meta-pipelines based on the Nextflow workflow language"
readme = "README.md"
authors = [
    { name = "Julian Flesch", email = "julian.flesch@qbic.uni-tuebingen.de" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "uvicorn>=0.40.0",
]
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/bmds-tue/nf-meta"
Issues = "https://github.com/bmds-tue/nf-meta/issues"

[project.scripts]
nf-meta = "nf_meta.__main__:cli"

[dependency-groups]
dev = [
    "twine>=6.2.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "types-networkx>=3.6.1.20260408",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260503",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
